--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Setup Git Configuration
         run: |
-          git config user.email "maudyfarasya@gmail.com"
-          git config user.name "0xmaudy"
+          git config user.email "reisaandila@gmail.com"
+          git config user.name "0xreisa"
 
       - name: Prepare Commit
         run: |
